# HPC_A

./: .gitignore  .modules  README.md  ternary_parallel.cpp
2D/serial/: ternary_thread.cpp~
2D/serial/ternary_serial_equal_ie/: ternary_serial  (+1 more)
2D/serial/ternary_serial_unequal_ie/: CMakeLists.txt  ternary_serial  ternary_serial.cpp  ternary_serial.cpp~  ternary_serial_unequal_ie.out  ternary_serial_unequal_ie.sh
2D/serial/ternary_serial_unequal_ie/output/: animate2.gp  plotAnimation_gif.gp
2D/thread/ternary_thread_equal_ie/: CMakeLists.txt  ternary_thread  ternary_thread.cpp~  ternary_thread_equal_ie.out  ternary_thread_equal_ie.sh  ternary_thread_equal_ie.sh~  threaded.sh~
2D/thread/ternary_thread_equal_ie/output/: plotAnimation_gif.gp
3D/: ternary_thread  ternary_thread.cpp
3D/ternary_thread_equal_ie_3D/: ternary_thread.cpp  ternary_thread.cpp~  ternary_thread_3D  ternary_thread_equal_ie.sh
3D/ternary_thread_unequal_ie_3D/: ternary_thread.cpp  ternary_thread_3D  ternary_thread_unequal_ie.sh
parallel/: ternary_parallel
serial/: ternary_serial
serial/ternary_serial_equal_ie/: ternary_serial_equal_ie.sh  ternary_serial_equal_ie.sh~
serial/ternary_serial_unequal_ie/: ternary_serial_unequal_ie.sh~
thread/: ternary_thread  ternary_thread.cpp~
thread/ternary_thread_equal_ie/: ternary_thread.cpp
thread/ternary_thread_unequal_ie/: ternary_thread.cpp~  ternary_thread_unequal_ie.sh
thread_2D/ternary_thread_equal_ie/: ternary_thread
thread_2D/ternary_thread_unequal_ie/: ternary_thread_unequal_ie.out  ternary_thread_unequal_ie.sh~
(+17 files in other folders)
